Buy and user login api / documentation
