# public/openapi.yaml
@@ -11,6 +11,8 @@ paths:
   /admin/create:
     post:
       summary: Create a new user or admin
+      tags:
+        - Admin
       requestBody:
         required: true
         content:
@@ -54,6 +56,8 @@ paths:
   /admin/login:
     post:
       summary: Login admin with email and password
+      tags:
+        - Admin
       requestBody:
         required: true
         content:
@@ -90,6 +94,8 @@ paths:
   /admin/boards:
     get:
       summary: Get all education boards
+      tags:
+        - Boards
       responses:
         '200':
           description: List of boards
@@ -111,6 +117,8 @@ paths:
 
     post:
       summary: Create a new education board (superadmin token required)
+      tags:
+        - Boards
       requestBody:
         required: true
         content:
@@ -139,6 +147,8 @@ paths:
 
     put:
       summary: Update an education board (superadmin token required)
+      tags:
+        - Boards
       requestBody:
         required: true
         content:
@@ -169,6 +179,8 @@ paths:
 
     delete:
       summary: Delete a board by ID (superadmin token required)
+      tags:
+        - Boards
       parameters:
         - in: query
           name: board_id
@@ -191,6 +203,8 @@ paths:
   /admin/classes:
     get:
       summary: Fetch all classes by Board ID
+      tags:
+        - Class
       parameters:
         - name: board_id
           in: query
@@ -221,6 +235,8 @@ paths:
 
     post:
       summary: Add a new class
+      tags:
+        - Class
       requestBody:
         required: true
         content:
@@ -256,6 +272,8 @@ paths:
 
     put:
       summary: Update an existing class
+      tags:
+        - Class
       parameters:
         - name: class_id
           in: path
@@ -289,6 +307,8 @@ paths:
 
     delete:
       summary: Delete a class
+      tags:
+        - Class
       parameters:
         - name: class_id
           in: path
@@ -309,6 +329,8 @@ paths:
   /admin/subjects:
     get:
       summary: Get all subjects by class_id
+      tags:
+        - Subject
       parameters:
         - name: class_id
           in: query
@@ -330,6 +352,8 @@ paths:
 
     post:
       summary: Add a new subject
+      tags:
+        - Subject
       security:
         - bearerAuth: []
       requestBody:
@@ -365,6 +389,8 @@ paths:
 
     put:
       summary: Update a subject
+      tags:
+        - Subject
       security:
         - bearerAuth: []
       requestBody:
@@ -394,6 +420,8 @@ paths:
 
     delete:
       summary: Delete a subject
+      tags:
+        - Subject
       security:
         - bearerAuth: []
       requestBody:
@@ -418,6 +446,8 @@ paths:
   /admin/chapters:
     get:
       summary: Get all chapters by subject_id
+      tags:
+        - Chapter
       parameters:
         - name: subject_id
           in: query
@@ -439,6 +469,8 @@ paths:
 
     post:
       summary: Add a new chapter
+      tags:
+        - Chapter
       security:
         - bearerAuth: []
       requestBody:
@@ -480,6 +512,8 @@ paths:
 
     put:
       summary: Update a chapter
+      tags:
+        - Chapter
       security:
         - bearerAuth: []
       requestBody:
@@ -515,6 +549,8 @@ paths:
 
     delete:
       summary: Delete a chapter
+      tags:
+        - Chapter
       security:
         - bearerAuth: []
       requestBody:
@@ -535,3 +571,269 @@ paths:
           description: Unauthorized
         '500':
           description: Error deleting chapter
+
+  /buy/chapter:
+    post:
+      summary: Add or update or deactivate chapter
+      operationId: addOrUpdateDeactiveChapter
+      tags:
+        - Buy
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - chapter_id
+                - subject_id
+                - user_id
+                - purchase_date
+                - validity
+                - token
+                - email
+                - user_type
+                - task_type
+              properties:
+                chapter_id:
+                  type: integer
+                  example: 1
+                subject_id:
+                  type: integer
+                  example: 1
+                user_id:
+                  type: string
+                  example: "user@example.com"
+                purchase_date:
+                  type: string
+                  format: date
+                  example: "2025-04-21 14:19:20"
+                validity:
+                  type: integer
+                  example: 180
+                token:
+                  type: string
+                  example: "abc123securetoken"
+                email:
+                  type: string
+                  format: email
+                  example: "user@example.com"
+                user_type:
+                  type: string
+                  example: "super_admin"
+                task_type:
+                  type: string
+                  example: ""
+      responses:
+        '200':
+          description: Chapter purchase updated successfully
+        '409':
+          description: Chapter added successfully
+        '400':
+          description: Invalid user input
+        '403':
+          description: Token verification failed
+        '500':
+          description: Server error
+
+  /buy/subject:
+    post:
+      summary: Add or update or deactivate Subject
+      operationId: addOrUpdateDeactiveSubject
+      tags:
+        - Buy
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - subject_id
+                - class_id
+                - user_id
+                - purchase_date
+                - validity
+                - token
+                - email
+                - user_type
+                - task_type
+              properties:
+                subject_id:
+                  type: integer
+                  example: 1
+                class_id:
+                  type: integer
+                  example: 1
+                user_id:
+                  type: string
+                  example: "user@example.com"
+                purchase_date:
+                  type: string
+                  format: date
+                  example: "2025-04-21 14:19:20"
+                validity:
+                  type: integer
+                  example: 180
+                token:
+                  type: string
+                  example: "abc123securetoken"
+                email:
+                  type: string
+                  format: email
+                  example: "user@example.com"
+                user_type:
+                  type: string
+                  example: "super_admin"
+                task_type:
+                  type: string
+                  example: ""
+      responses:
+        '200':
+          description: Subject updated successfully
+        '409':
+          description: Subject added successfully
+        '400':
+          description: Invalid user input
+        '403':
+          description: Token verification failed
+        '500':
+          description: Server error
+
+  /buy/class:
+    post:
+      summary: Add or update or deactivate Class
+      operationId: addOrUpdateDeactiveClass
+      tags:
+        - Buy
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - class_id
+                - user_id
+                - purchase_date
+                - validity
+                - token
+                - email
+                - user_type
+                - task_type
+              properties:
+                class_id:
+                  type: integer
+                  example: 1
+                user_id:
+                  type: string
+                  example: "user@example.com"
+                purchase_date:
+                  type: string
+                  format: date
+                  example: "2025-04-21 14:19:20"
+                validity:
+                  type: integer
+                  example: 180
+                token:
+                  type: string
+                  example: "abc123securetoken"
+                email:
+                  type: string
+                  format: email
+                  example: "user@example.com"
+                user_type:
+                  type: string
+                  example: "super_admin"
+                task_type:
+                  type: string
+                  example: ""
+      responses:
+        '200':
+          description: Subject updated successfully
+        '409':
+          description: Subject added successfully
+        '400':
+          description: Invalid user input
+        '403':
+          description: Token verification failed
+        '500':
+          description: Server error
+
+  /user/create:
+    post:
+      summary: Create user
+      operationId: CreateUser
+      description: Create a user with email, password, and role.
+      tags:
+        - User 
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+                - role
+              properties:
+                email:
+                  type: string
+                  format: email
+                  example: "ps@gmail.com"
+                password:
+                  type: string
+                  example: 123
+                role:
+                  type: string
+                  enum: [user, sub_admin]
+                  example: user
+      responses:
+        '200':
+          description: User Created successful
+        '400':
+          description: Missing email or password
+        '401':
+          description: Invalid credentials
+        '500':
+          description: Internal server error
+
+  /user/login:
+    post:
+      summary: Login user or sub_admin
+      operationId: LoginUser
+      description: Authenticates a user with email, password, and role.
+      tags:
+        - User 
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+                - role
+              properties:
+                email:
+                  type: string
+                  format: email
+                  example: "ps@gmail.com"
+                password:
+                  type: string
+                  example: 123
+                role:
+                  type: string
+                  enum: [user, sub_admin]
+                  example: user
+      responses:
+        '200':
+          description: User login successful
+        '400':
+          description: Missing email or password
+        '401':
+          description: Invalid credentials
+        '500':
+          description: Internal server error
